2008-09-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (reset-clfswm): New function.

2008-09-02  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-menu.lisp (init-menu): New function.

	* src/clfswm-util.lisp (reload-clfswm): New function to reload
	CLFSWM.
	(exit-clfswm): Rename quit-clfswm to exit-clfswm.

	* src/clfswm.lisp (main, main-unprotected): Handle error in a
	superior main function. Now CLFSWM can't break the X session. It
	just reinitialize the display and run a new main loop.

	* src/clfswm-corner.lisp: Make *clfswm-terminal* and
	*vt-keyboard-on* global to avoid warnings when loading clfswm.

	* src/clfswm-layout.lisp: Add a specific GIMP layout menu.
	(help-on-gimp-layout): Describe how to use the GIMP layout.

2008-09-01  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (set-gimp-layout): Change the layout to
	main-window-right-layout. Change the keybinding for (shift)alt+tab
	to not select windows in the main window lisst.
	Bind F8 to add a window in the main window list.
	Bind F9 to remove a window in the main window list.
	Change the focus policy to :sloppy.
	(set-previous-layout): Restore the previous layout, keybinding and
	focus policy.

2008-08-31  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-menu.lisp (add-menu-comment): Add comments in menu.

	* src/clfswm-layout.lisp (main-window-left-layout)
	(main-window-bottom-layout, main-window-top-layout): New
	functions.
	Factorize layouts in menu.

2008-08-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (main-window-right-layout): A possible
	GIMP layout: one or more main windows on one side of the
	frame. Others on the other size.

	* src/clfswm-util.lisp
	(current-frame-set-click/sloppy-focus-policy): Each frame can have
	a different focus policy (one of :click or :sloppy).
	The default focus policy is set with *default-focus-policy*.
