@@ -352,10 +352,13 @@
       <a name="FRAME-FOCUS-POLICY"></a><a href="#FRAME-MENU">Frame-Focus-Policy</a>
     </h3>
     <p>
-      c: Set a click focus policy for the current frame
+      c: Set a click focus policy for the current frame.
     </p>
     <p>
-      s: Set a sloppy focus policy for the current frame
+      s: Set a sloppy focus policy for the current frame.
+    </p>
+    <p>
+      t: Set a (strict) sloppy focus policy only for windows in the current frame.
     </p>
     <hr>
     <h3>
